use published version of laravolt/etalase

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravolt/auth": "dev-master",
         "laravolt/epicentrum": "dev-master",
         "laravolt/epilog": "dev-master",
+        "laravolt/etalase": "dev-master",
         "laravolt/password": "dev-master",
         "laravolt/semantic-form": "dev-master",
         "laravolt/suitable": "dev-master",
