--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,9 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "laravolt/laravolt",
+    "description": "The Laravolt Platform.",
+    "keywords": ["platform", "laravolt", "laravel", "application", "admin panel"],
     "license": "MIT",
     "type": "project",
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../*",
-            "options": {
-                "symlink": true
-            }
-        }
-    ],
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
