--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,18 @@
     "keywords": ["platform", "laravolt", "laravel", "application", "admin panel"],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../*",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require": {
         "php": "^7.1.3",
+        "activecollab/activecollab-feather-sdk": "^3.1",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
@@ -33,7 +43,8 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Laravolt\\Collab\\": "packages/laravolt/collab/src/"
         }
     },
     "autoload-dev": {
