--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,28 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../*",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravolt/auth": "dev-master",
+        "laravolt/avatar": "dev-master",
+        "laravolt/epicentrum": "dev-master",
+        "laravolt/etalase": "dev-master",
+        "laravolt/password": "dev-master",
+        "laravolt/suitable": "dev-master",
+        "laravolt/semantic-form": "dev-master as 2.x-dev",
+        "laravolt/ui": "dev-master"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
