--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,14 @@
         "laravel/tinker": "^1.0",
         "laravolt/auth": "dev-master",
         "laravolt/avatar": "dev-master",
+        "laravolt/blank": "dev-master",
         "laravolt/epicentrum": "dev-master",
         "laravolt/etalase": "dev-master",
+        "laravolt/indonesia": "^0.9.0",
+        "laravolt/mailkeeper": "dev-master",
         "laravolt/password": "dev-master",
-        "laravolt/suitable": "dev-master",
         "laravolt/semantic-form": "dev-master as 2.x-dev",
+        "laravolt/suitable": "dev-master",
         "laravolt/ui": "dev-master"
     },
     "require-dev": {
@@ -45,11 +48,14 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravolt/etalase"
+            ]
         }
     },
     "autoload": {
         "psr-4": {
+            "Laravolt\\Cms\\": "packages/laravolt/cms/src",
             "App\\": "app/"
         },
         "classmap": [
