--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,8 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+            "@php artisan key:generate --ansi",
+            "@php artisan laravolt:link-assets"
         ]
     }
 }
