--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.4.0",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
@@ -23,6 +23,7 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.8",
         "set-value": "^2.0.1",
-        "mixin-deep": "^1.3.2"
+        "mixin-deep": "^1.3.2",
+        "js-yaml": "^3.13.1"
     }
 }
