--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,34 @@
 {
-    "name": "laravel/laravel",
+    "name": "laravolt/laravolt",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "The Laravolt Platform.",
     "keywords": [
-        "framework",
-        "laravel"
+        "platform",
+        "laravolt"
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
+        "bensampo/laravel-enum": "^1.26",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "laravolt/acl": "^4.1",
-        "laravolt/auth": "^4.7",
-        "laravolt/avatar": "^2.2",
-        "laravolt/epicentrum": "^1.0",
-        "laravolt/mailkeeper": "^0.9.0",
-        "laravolt/semantic-form": "^2.2",
-        "laravolt/suitable": "^3.3",
-        "laravolt/ui": "^0.7.2"
+        "laravolt/acl": "^4.2",
+        "laravolt/auth": "^4.10",
+        "laravolt/avatar": "^3.0",
+        "laravolt/epicentrum": "^1.1",
+        "laravolt/mailkeeper": "~0.10.0",
+        "laravolt/semantic-form": "^2.6",
+        "laravolt/suitable": "^3.5",
+        "laravolt/thunderclap": "~0.15",
+        "laravolt/ui": "~0.14"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.5"
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
