--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "spatie/laravel-web-tinker": "^1.5"
     },
     "config": {
         "optimize-autoloader": true,
