--- a/composer.json
+++ b/composer.json
@@ -8,23 +8,20 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "bensampo/laravel-enum": "^1.26",
+        "php": "^7.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^6.4",
         "laravel/tinker": "^1.0",
-        "laravolt/acl": "^4.2",
-        "laravolt/auth": "^4.10",
         "laravolt/avatar": "^3.0",
         "laravolt/epicentrum": "^1.1",
         "laravolt/mailkeeper": "~0.10.0",
+        "laravolt/platform": "~0.2",
         "laravolt/semantic-form": "^2.6",
         "laravolt/suitable": "^3.5",
-        "laravolt/thunderclap": "~0.15",
-        "laravolt/ui": "~0.14",
-        "spatie/laravel-medialibrary": "^7.0.0"
+        "laravolt/thunderclap": "~0.15"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
@@ -68,7 +65,7 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
-            "@php artisan laravolt:link-assets"
+            "@php artisan preset laravolt"
         ]
     }
 }
