--- a/composer.json
+++ b/composer.json
@@ -1,73 +1,116 @@
 {
     "name": "laravolt/laravolt",
-    "type": "project",
-    "description": "The Laravolt Platform.",
-    "keywords": [
-        "platform",
-        "laravolt"
-    ],
+    "description": "Repository for Laravolt packages development",
+    "keywords": ["laravolt", "platform"],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.4",
-        "laravel/tinker": "^1.0",
+        "php": ">=7.3",
+        "ext-gd": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "ext-openssl": "*",
+        "ext-xml": "*",
+        "anhskohbo/no-captcha": "^3.1",
+        "appstract/laravel-blade-directives": "^1.7",
+        "bensampo/laravel-enum": "^1.26",
+        "guzzlehttp/guzzle": "^6.5",
+        "illuminate/auth": "^6.0",
+        "illuminate/console": "^6.0",
+        "illuminate/database": "^6.0",
+        "illuminate/support": "^6.0",
+        "jenssegers/date": "^3.4",
+        "kalnoy/nestedset": "^5.0",
         "laravolt/avatar": "^3.0",
-        "laravolt/epicentrum": "dev-develop",
-        "laravolt/mailkeeper": "~0.10.0",
-        "laravolt/platform": "~0.2",
-        "laravolt/semantic-form": "^2.6",
-        "laravolt/suitable": "^3.5",
-        "laravolt/thunderclap": "~0.15"
+        "lavary/laravel-menu": "^1.7.7",
+        "league/flysystem": "^1.0",
+        "maatwebsite/excel": "^3.1",
+        "myclabs/deep-copy": "^1.9",
+        "nesbot/carbon": "^2.0",
+        "niklasravnsborg/laravel-pdf": "^2.0",
+        "phpoffice/phpword": "^0.17.0",
+        "rap2hpoutre/fast-excel": "^1.3.1",
+        "rkorebrits/htmltoopenxml": "^0.1.9",
+        "spatie/data-transfer-object": "^1.10",
+        "spatie/eloquent-sortable": "^3.7",
+        "spatie/laravel-medialibrary": "^7.0",
+        "spatie/laravel-schemaless-attributes": "^1.6",
+        "spatie/laravel-sluggable": "^2.2",
+        "spatie/laravel-tags": "^2.5",
+        "spatie/laravel-translatable": "^4.2",
+        "spatie/once": "^2.1",
+        "stolz/assets": "~0.1",
+        "watson/rememberable": "^3.2"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.2",
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
+        "codedungeon/phpunit-result-printer": "^0.26.2",
+        "mockery/mockery": "^1.2",
+        "orchestra/database": "^4.0",
+        "orchestra/testbench": "^4.0",
+        "orchestra/testbench-browser-kit": "^4.0",
+        "php-coveralls/php-coveralls": "^2.1",
         "phpunit/phpunit": "^8.0",
-        "spatie/laravel-web-tinker": "^1.5"
+        "squizlabs/php_codesniffer": "^3.4"
+    },
+    "autoload": {
+        "files": [
+            "packages/platform/src/helpers.php",
+            "packages/semantic-form/src\\helpers.php",
+            "packages/support/src/helpers.php"
+        ],
+        "psr-4": {
+            "Laravolt\\Camunda\\": "packages/camunda/src",
+            "Laravolt\\Comma\\": "packages/comma/src",
+            "Laravolt\\Contracts\\": "packages/platform/src/Contracts/",
+            "Laravolt\\Epicentrum\\": "packages/platform/src/Epicentrum/",
+            "Laravolt\\Epilog\\": "packages/epilog/src",
+            "Laravolt\\Etalase\\": "packages/etalase/src",
+            "Laravolt\\Lookup\\": "packages/lookup/src",
+            "Laravolt\\Mailkeeper\\": "packages/mailkeeper/src",
+            "Laravolt\\Media\\": "packages/media/src",
+            "Laravolt\\Menu\\": "packages/menu/src",
+            "Laravolt\\Platform\\": "packages/platform/src/Platform/",
+            "Laravolt\\SemanticForm\\": "packages/semantic-form/src",
+            "Laravolt\\Suitable\\": "packages/suitable/src",
+            "Laravolt\\Support\\": "packages/support/src",
+            "Laravolt\\Thunderclap\\": "packages/thunderclap/src",
+            "Laravolt\\Workflow\\": "packages/workflow/src"
+        }
+    },
+    "autoload-dev": {
+        "classmap": [],
+        "psr-4": {
+            "Laravolt\\Comma\\Tests\\": "packages/comma/tests",
+            "Laravolt\\SemanticForm\\Test\\": "packages/semantic-form/tests",
+            "Laravolt\\Support\\Test\\": "packages/support/tests",
+            "Laravolt\\Tests\\": "packages/platform/tests/",
+            "Laravolt\\Thunderclap\\Test\\": "packages/thunderclap/tests"
+        }
+    },
+    "replace": {
+        "laravolt/support": "self.version",
+        "laravolt/lookup": "self.version",
+        "laravolt/camunda": "self.version",
+        "laravolt/comma": "self.version",
+        "laravolt/epilog": "self.version",
+        "laravolt/etalase": "self.version",
+        "laravolt/mailkeeper": "self.version",
+        "laravolt/media": "self.version",
+        "laravolt/menu": "self.version",
+        "laravolt/platform": "self.version",
+        "laravolt/semantic-form": "self.version",
+        "laravolt/suitable": "self.version",
+        "laravolt/thunderclap": "self.version",
+        "laravolt/workflow": "self.version"
+    },
+    "suggest": {
+        "laravel/scout": "Required to utilize Searchable Post",
+        "laravolt/platform": "Some semantic-form components only works in Laravolt Platform"
     },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi",
-            "@php artisan storage:link",
-            "@php artisan laravolt:link-assets"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi",
-            "@php artisan preset laravolt"
-        ]
-    }
+    "prefer-stable": true
 }
