--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,16 @@
     "license": "MIT",
     "require": {
         "php": ">=7.3",
+        "ext-bcmath": "*",
+        "ext-ctype": "*",
+        "ext-curl": "*",
         "ext-gd": "*",
+        "ext-iconv": "*",
+        "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
+        "ext-pdo": "*",
         "ext-xml": "*",
         "anhskohbo/no-captcha": "^3.1",
         "appstract/laravel-blade-directives": "^1.7",
