--- a/monorepo-builder.yml
+++ b/monorepo-builder.yml
@@ -8,16 +8,16 @@ parameters:
     # for "split" command
     directories_to_repositories:
         packages/camunda: 'git@github.com:laravolt/camunda.git'
-        src/comma: 'git@github.com:laravolt/comma.git'
-        src/epilog: 'git@github.com:laravolt/epilog.git'
-        src/etalase: 'git@github.com:laravolt/etalase.git'
-        src/lookup: 'git@github.com:laravolt/lookup.git'
-        src/mailkeeper: 'git@github.com:laravolt/mailkeeper.git'
-        src/media: 'git@github.com:laravolt/menu.git'
-        src/menu: 'git@github.com:laravolt/menu.git'
-        src/platform: 'git@github.com:laravolt/platform.git'
-        src/semantic-form: 'git@github.com:laravolt/semantic-form.git'
-        src/suitable: 'git@github.com:laravolt/suitable.git'
-        src/support: 'git@github.com:laravolt/support.git'
-        src/thunderclap: 'git@github.com:laravolt/thunderclap.git'
-        src/workflow: 'git@github.com:laravolt/workflow.git'
+        packages/comma: 'git@github.com:laravolt/comma.git'
+        packages/epilog: 'git@github.com:laravolt/epilog.git'
+        packages/etalase: 'git@github.com:laravolt/etalase.git'
+        packages/lookup: 'git@github.com:laravolt/lookup.git'
+        packages/mailkeeper: 'git@github.com:laravolt/mailkeeper.git'
+        packages/media: 'git@github.com:laravolt/menu.git'
+        packages/menu: 'git@github.com:laravolt/menu.git'
+        packages/platform: 'git@github.com:laravolt/platform.git'
+        packages/semantic-form: 'git@github.com:laravolt/semantic-form.git'
+        packages/suitable: 'git@github.com:laravolt/suitable.git'
+        packages/support: 'git@github.com:laravolt/support.git'
+        packages/thunderclap: 'git@github.com:laravolt/thunderclap.git'
+        packages/workflow: 'git@github.com:laravolt/workflow.git'
